# finanace_manager

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  MSA_INTEGRATION.md  PLAN.md  README.md  docker-compose.yml
server/: Cargo.toml  Dockerfile  sqlx.sh
server/.sqlx/: query-000a850d180474e798d386851cabd88a28b573bbab0a762fa5cf78788ae23327.json  query-004421a7ffc487d6fc15f60a4d6b4fd7addeba4c5ae201459446f9ebb0da83f9.json  query-02827278b43eb74bbe9081a37f51475f3a94ca5ef087a61f974e49b7b571ad08.json  query-045d87dad175a2a7825c7a0d626c15ca8f5b43343c61487d914893556036724e.json  query-04b82d26fb63c12fd714b7c78bfa042f67e0f546540c5d4573198358fc1981d2.json  query-051ca15cc9e56f9f9426a601313b307b3c2b3c67e56f66fdb1ca78261d53f02c.json  query-09d62c747a8844e208df057378943fa019584b03e185ff2033b259edc739c6e4.json  query-0b7d1721cd8ff58f783fe8a38acd46ef2d8c9e0144a85c9a2a952c47e23641bc.json  query-0d409f7993e7c0d31cfb7a02006e06b7be058c3eca5b7dab278cf01ad71e0c66.json  query-0e568a784d24410c1632045df789117fdaf0ec29946495e5c3102a2bb8fc7336.json  query-109fcfc39477a07acf96c55b35531ec54b15db50d597f78cbf83f9d747db7c4f.json  query-10c38203adf0d32dc75d470b0d4be5f09d8e6bff056ea94d0c0ceb57e1dbecbe.json  query-10cbc739db072d6e0d86992f98758c59fb2a7d54ce1b73f61173f0da1e63a1c3.json  query-10dad898384852ca747b0f5b0f829666ecd974db3c3fed44264c59e29454cc10.json  query-12ca678563d756b074f476d0100385fdf933d1e1574f7c6cf5229385bb4caeba.json  query-172d24b2f0853d0a113f5d26813702815ea21a014de4723c93c10fffce3d756d.json  query-17807d7bbb690e81ff5b24a4eeba45abed1506add1ff7c6edc120945220f1c2c.json  query-19388309a7d1beecf07f255492796ead546d8a32e1d5268f4654aae1a2887861.json  query-19f3f5ca3fb2772cf58046b3cf793de18685c786ad1f4e67495ef4dc342cd315.json  query-1c96facf71fb34678803503c179ff812b669035890d38a8794a3cdffd8128850.json  query-1d58084b35771fe3422ae64d0ef36059f3370f2c3d0077a03b3844eba8a5b60c.json  query-202f0102620250e1fae043e73976f82a9065041ea4e160d25ef2546adf135bb8.json  query-21b366046dfb158f8cab1f13cae4364f4c85d416024114c42cd2be9b0811420c.json  query-21d3f3f707af1d79539a05c933b33b6d63587786579530ef86f03ad066c903d5.json  query-230c67c2f9a0ee85cf4b042b218f0c4eddb77e23188526b63c339585fc11137f.json  query-28df6a2c129bb3d9d3870f3efcfd1b2e3af1802e2a17e8a2ad7e944038a3ec48.json  query-2b3699f34b32967e106481501a75be1fd07795b7aca1d41c6df69b2094a8d017.json  query-2b7721c134e66f0a1eb264e389e652667872a3119101e4eac4882c2cf74b1344.json  query-2d2aa6bf479d8fbb9de6eb8516852bb05634e8a1e5cf92ec1f2f1eea4fc9cb72.json  query-30399b482ae5be2fd714055c0d98e9b1f8a2bf846574c626248118cfc7d552b8.json  query-307f83dd6216bfe0fdd538d09c7e96428be851e1aafa206c6426a436296d071e.json  query-319cfd20da370ef5c11b080d148d5b7ac7bf13267a74918abfb673dca4271396.json  query-31ab9ca31e456df5803852aa5a8efddc278a5940f5a7b5ca7c04c5ed87292fac.json  query-31efbca71e1130a93c4a3b0abddd6e6710dab902bac6af6c3b237a2a5f98e690.json  query-3387052a982b6bb115efa25f54d388f8765c7e55cddb94b2f72f14456a59e0f9.json  query-34225dd2fc1f8a7908c76dd72fa655b9af972995dde957b51bd6ab46a32143d7.json  query-35552fcdc586c3ca11c3daa2384688040b106fd17c0f973d24501fcde9aee847.json  query-3ba58c296bbd8f024489d76955e3b536c83200af32389a13917a0c7b9e69371d.json  query-3c76855efab155faffc559e9e9019f45a91e497daf708675dc8d2f7a9b335df1.json  query-3f010a476c57bead16837cccdab95d3847519ea4861d8d51dad57157a0d0a01a.json  (+142 more)
server/migration/: Cargo.toml
server/migrations/: 001_init.sql  002_fix_settlement_view.sql
server/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
server/tests/: test_body_limit.rs  test_category_kind.rs  test_cluster_category.rs  test_clusters.rs  test_m3.rs  (+11 more)
(+132 files in other folders)
