[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
sea-orm-migration = { version = "1", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
sea-orm = { version = "1", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
